--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Ya casi terminamos</p>
-    <p><img src="https://th.bing.com/th/id/R.7c6da8a05a3a5892f13f6ba7db9e7008?rik=q0no8UHxS6OEGQ&riu=http%3a%2f%2fclipartix.com%2fwp-content%2fuploads%2f2017%2f01%2fCelebration-celebrate-images-clip-art.jpg&ehk=5yHBRbmP8wn1M5rJ%2bwFdsf1Hcoa4ShMi8i2u4wCu0lM%3d&risl=&pid=ImgRaw&r=0" alt="celebration"></p>
+    <p><img src="https://th.bing.com/th/id/R.7c6da8a05a3a5892f13f6ba7db9e7008?rik=q0no8UHxS6OEGQ&riu=http%3a%2f%2fclipartix.com%2fwp-content%2fuploads%2f2017%2f01%2fCelebration-celebrate-images-clip-art.jpg&ehk=5yHBRbmP8wn1M5rJ%2bwFdsf1Hcoa4ShMi8i2u4wCu0lM%3d&risl=&pid=ImgRaw&r=0" alt="celebration"width="300" height="200"></p>
 </body>
 </html>
